syntax = "proto3";

package task;

option go_package = "./pb";

service Task { rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse); }

message CreateTaskRequest {
  string name = 1;
  string description = 2;
  int32 weight = 3;
}

message CreateTaskResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  int32 weight = 4;
}
